[package]
name = "pbni-rs"
version = "0.1.14"
authors = ["gaoqiangz <gaoqiangz@msn.com>"]
edition = "2018"
keywords = ["pb", "powerbuilder", "pbni", "ffi"]
categories = ["api-bindings"]
description = "PBNI for Rust"
documentation = "https://docs.rs/pbni-rs"
repository = "https://github.com/gaoqiangz/pbni-rs"
license = "BSD-2-Clause"
include = ["/build.rs", "/Cargo.toml", "/LICENSE", "/README.md", "/cpp/**", "/src/**", "/examples/**"]

[package.metadata.docs.rs]
all-features = true
targets = ["i686-pc-windows-msvc"]

[lib]
name = "pbni"
crate-type = ["rlib", "cdylib"]

[workspace]
members = [
    ".",
    "codegen",
    "pbrs",
]

[patch.crates-io]
pbni-rs = { path = "." }
pbni-codegen = { path = "codegen" }

[dependencies]
libc = "0.2.80"
widestring = { version = "0.4.3"}
const-utf16 = "0.2.1"
chrono = "0.4.19"
rust_decimal = "1.10.3"

# feature: global_function, nonvisualobject, visualobject
pbni-codegen = { version = "0.1.0", optional = true}

# feature: pbni
static_init = { version = "1.0.1", optional = true}

# feature: syslib, visualobject
winapi = { version = "0.3.9", features = ["windef","corecrt","psapi"], optional = true }

# feature: syslib, vm
libloading = { version = "0.7.0", optional = true }
lazy_static = "1.4.0"
paste = "1.0.11"

[build-dependencies]
cc = "1.0.62"

# feature: syslib
bindgen = { version = "0.63.0", optional = true }

[features]
default = ["full"]
full = ["pbx", "syslib", "global_function", "nonvisualobject", "visualobject"]

pbx = ["static_init", "pbni-codegen/pbx"]
syslib = ["bindgen", "libloading", "winapi", "pbni-codegen/syslib"]
global_function = ["pbni-codegen/global_function"]
nonvisualobject = ["pbni-codegen/nonvisualobject"]
visualobject = ["winapi", "pbni-codegen/visualobject"]
vm = ["libloading"]
unchecked = ["pbni-codegen/unchecked"]
symbol_map = []

[[example]]
name = "vm"
required-features = ["vm"]
