[package]
name = "pbrs"
version = "0.1.0"
authors = ["gaoqiangz <gaoqiangz@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pbni-rs = { version = "0.1.0", features = ["full"] }